Minor JDK 17 language level improvments (#304)